<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/image_arrow_left"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_challenge_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/s_c_dream5"
        android:text="@string/title_challenge_detail"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_left"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_left"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rect_hot_pink_radius100"
        android:fontFamily="@font/gmarket_sans_bold"
        android:paddingHorizontal="14dp"
        android:paddingVertical="10dp"
        android:text="@string/content_challenge_detail_join"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_challenge_detail_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_challenge_detail_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_challenge_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_rect_bright_green_radius10"
        android:padding="26dp"
        app:layout_constraintTop_toBottomOf="@id/tv_challenge_detail_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gmarket_sans_bold"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="길거리 쓰레기 줍기" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/very_light_grey"
        android:layout_marginTop="27dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/cl_challenge_name" />

    <TextView
        android:id="@+id/tv_challenge_participants_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_challenge_participant_list"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/s_c_dream5"
        android:layout_marginTop="18sp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="@id/divider1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_challenge_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_challenge_participants_list"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_challenge_participant" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/very_light_grey"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/rv_home_challenge_participants" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_challenge_certification" />

</androidx.constraintlayout.widget.ConstraintLayout>